--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,10 @@ Description: More about what it does (maybe more than one line)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Suggests: testthat, lintr
+RoxygenNote: 6.0.1
+Imports: purrr,
+    methods
+Collate:
+    'polyply_data_validity.R'
+    'polyply_poly_frame.R'
