--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Suggests: testthat, lintr
 RoxygenNote: 6.0.1
 Imports: purrr,
     methods
-Collate:
+Collate: 
     'polyply_data_validity.R'
+    'polyply_merge_functions.R'
     'polyply_poly_frame.R'
