add non-standard-eval for activate()
User can now call activate(pf, 2) or activate(pf. some_df); (ie, by integer
indexing or by var-name indexing).

Note, that activate(pf, "some_df") has _not_ been implemented yet

Modified the title to README.md

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ importFrom(dplyr,filter)
 importFrom(methods,is)
 importFrom(purrr,reduce)
 importFrom(rlang,enquo)
+importFrom(rlang,quo_is_symbol)
 importFrom(rlang,quo_text)
 importFrom(tidygraph,activate)
