adds initial slides to ioslides presentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,9 @@ Description: More about what it does (maybe more than one line)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat, lintr
+Suggests: testthat, lintr,
+    knitr,
+    rmarkdown
 RoxygenNote: 6.0.1
 Imports: purrr,
     methods,
@@ -22,3 +24,4 @@ Collate:
     'polyply_filter.R'
     'polyply_merge_functions.R'
     'polyply_poly_frame.R'
+VignetteBuilder: knitr
