add 'mutate' method on poly_frame class
mutate.poly_frame exported.

The only test checks that 'mutate' modifies the active data-frame as if
mutate.data.frame had been called on the extracted active data-frame.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,5 +27,6 @@ Collate:
     'polyply_data_validity.R'
     'polyply_filter.R'
     'polyply_merge_functions.R'
+    'polyply_mutate.R'
     'polyply_poly_frame.R'
 VignetteBuilder: knitr
