--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,13 @@ S3method(as.list,poly_frame)
 S3method(as_poly_frame,list)
 S3method(filter,poly_frame)
 S3method(merge,poly_frame)
+S3method(mutate,poly_frame)
 export(activate)
 export(as_poly_frame)
 export(filter)
+export(mutate)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(methods,is)
 importFrom(purrr,reduce)
 importFrom(rlang,enquo)
