add `poly_frame` function
User can now create a `poly_frame` by passing in an arbitrary number of args, and an optional `merge_fn`

Some formatting of other code in polyply_poly_frame.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(activate)
 export(as_poly_frame)
 export(filter)
 export(mutate)
+export(poly_frame)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(methods,is)
