add new vignette 'Using `polyply`'
Added example of combining the taxonomy datasets together and plotting brain-body relationship, coloured by taxonomic-order.

Added `ggplot2` to the 'suggested' packages, since is required while building the new vignette.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Depends:
 Suggests: testthat, lintr,
     knitr,
     rmarkdown,
-    covr
+    covr,
+    ggplot2
 RoxygenNote: 6.0.1
 Imports: purrr,
     methods,
