--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,16 @@ S3method(as_poly_frame,list)
 S3method(filter,poly_frame)
 S3method(merge,poly_frame)
 S3method(mutate,poly_frame)
+S3method(select,poly_frame)
 export(activate)
 export(as_poly_frame)
 export(filter)
 export(mutate)
 export(poly_frame)
+export(select)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(methods,is)
 importFrom(purrr,reduce)
 importFrom(rlang,enquo)
