deduplicate filter, select, mutate methods
Added function builder `build_method_from_dplyr_verb`. This returns a function that applies a dplyr verb to whatever is the currently-active data-frame in a poly_frame.

mutate / filter / select were reimplemented to use this builder-function.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,7 @@ Collate:
     'polyply_activate.R'
     'polyply_data.R'
     'polyply_data_validity.R'
+    'polyply_dplyr_call.R'
     'polyply_filter.R'
     'polyply_merge_functions.R'
     'polyply_mutate.R'
