--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,8 @@ Author: Russ Hyde, University of Glasgow
 Maintainer: Russ Hyde <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
+URL: https://github.com/russHyde/polyply
+BugReports: https://github.com/russHyde/polyply/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -22,7 +24,7 @@ Imports: purrr,
     rlang,
     tidygraph,
     dplyr
-Collate: 
+Collate:
     'polyply_activate.R'
     'polyply_data.R'
     'polyply_data_validity.R'
