--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Collate:
     'polyply_data.R'
     'polyply_data_validity.R'
     'polyply_dplyr_call.R'
+    'polyply_dplyr_verbs.R'
     'polyply_filter.R'
     'polyply_merge_functions.R'
     'polyply_mutate.R'
