fixes #1: map_pf over a list, return a poly_frame
New function `map_pf`. Given a list (eg, a poly_frame), this will map a
function over each entry in the list and convert the resulting list to a
`poly_frame` object.

Tested the function:
  - class(map_pf(...)) == "poly_frame"
  - map_pf(some_list, f, ...) == as_poly_frame(map(some_list, f, ...))

New file polyply_purrr_verbs.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,4 +32,5 @@ Collate:
     'polyply_dplyr_verbs.R'
     'polyply_merge_functions.R'
     'polyply_poly_frame.R'
+    'polyply_purrr_verbs.R'
 VignetteBuilder: knitr
