--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(select,poly_frame)
 export(activate)
 export(as_poly_frame)
 export(filter)
+export(map_pf)
 export(mutate)
 export(poly_frame)
 export(select)
