--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(select)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(magrittr,"%>%")
 importFrom(methods,is)
 importFrom(purrr,reduce)
 importFrom(rlang,enquo)
