--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,14 @@ S3method(select,poly_frame)
 export(activate)
 export(as_poly_frame)
 export(filter)
+export(map_pf)
 export(mutate)
 export(poly_frame)
 export(select)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(magrittr,"%>%")
 importFrom(methods,is)
 importFrom(purrr,reduce)
 importFrom(rlang,enquo)
