fixes #3, fixes #4: add group_by/ungroup/rename
New poly_frame methods for modifying the active data-frame were added by
extending the dplyr S3 methods group_by, ungroup and rename.

Docs for the three methods.

Added new file for housing all dplyr-verb based tests. Currently contains tests
for group_by, ungroup and rename.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,19 +4,28 @@ S3method(activate,poly_frame)
 S3method(as.list,poly_frame)
 S3method(as_poly_frame,list)
 S3method(filter,poly_frame)
+S3method(group_by,poly_frame)
 S3method(merge,poly_frame)
 S3method(mutate,poly_frame)
+S3method(rename,poly_frame)
 S3method(select,poly_frame)
+S3method(ungroup,poly_frame)
 export(activate)
 export(as_poly_frame)
 export(filter)
+export(group_by)
 export(map_pf)
 export(mutate)
 export(poly_frame)
+export(rename)
 export(select)
+export(ungroup)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(methods,is)
 importFrom(purrr,reduce)
